# primitive_calculus

./: .gitignore  README.md
MSE/: CMakeLists.txt
MSE/scripts/: check_approximation.py  generate_data.py
MSE/src/: CMakeLists.txt  main.c  mse_utils.c  mse_utils.h
NewtonMethod/: CMakeLists.txt
NewtonMethod/include/: newton_1D.h
NewtonMethod/src/: CMakeLists.txt  bisection.c  newton_1D.c  other_methods.c  secant.c  third_order_newton.c
NewtonMethod/tests/: CMakeLists.txt  test_bisection.c  test_newton_1D.c  test_other_methods.c  test_secant.c  test_third_order.c
NonlinearEquations_1D/: CMakeLists.txt
NonlinearEquations_1D/scripts/: plot_func.py
NonlinearEquations_1D/src/: CMakeLists.txt  bisection.c  newton_1D.c  secant.c  third_order_newton.c
NonlinearEquations_1D/tests/: CMakeLists.txt  compare_methods.c  test_bisection.c  test_newton_1D.c  test_secant.c  test_third_order.c
NonlinearEquations_ND/: CMakeLists.txt
NonlinearEquations_ND/include/: nonlinear_equations.h
NonlinearEquations_ND/src/: CMakeLists.txt  newton_method.c
NonlinearEquations_ND/tests/: CMakeLists.txt  lapack_tests.c  newton_test.c
method_piyavskogo/scripts/: tests.py
